docs: add JavaFX section to README.md with installation instructions and examples